[gd_scene load_steps=4 format=3 uid="uid://febbnmv28yvg"]

[ext_resource type="PackedScene" uid="uid://8mdebwhsh6rj" path="res://actors/character/base_character/base_character.tscn" id="1_gmky7"]
[ext_resource type="Script" path="res://actors/enemies/base_enemy/base_enemy.gd" id="2_sarbm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m741n"]

[node name="base_enemy" instance=ExtResource("1_gmky7")]
collision_layer = 4
collision_mask = 4
script = ExtResource("2_sarbm")
base_enemy_debug = false

[node name="attack_interval_timer" type="Timer" parent="." index="2"]
autostart = true

[node name="attack_area" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="attack_area_collision" type="CollisionShape2D" parent="attack_area" index="0"]
shape = SubResource("RectangleShape2D_m741n")

[connection signal="timeout" from="attack_interval_timer" to="." method="_on_attack_interval_timer_timeout"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
